[gd_scene load_steps=2 format=3 uid="uid://dg0n7h7o3aj25"]

[ext_resource type="Script" uid="uid://dkeiri6jwjn4m" path="res://entrega19/formulario.gd" id="1_wihfd"]

[node name="formulario" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wihfd")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.1
anchor_bottom = 0.1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="nome" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="NameInput" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="idade" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="AgeInput" type="LineEdit" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="SubmitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Enviar"

[node name="ResultLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "O resultado aparecer√° aqui."

[connection signal="pressed" from="VBoxContainer/SubmitButton" to="." method="_on_submit_button_pressed"]
